# kronos

./: .gitignore  AGENTS.md  README.md  debug_character_select.py  pyproject.toml
.claude/: settings.local.json
docs/: synthetic_arcface_training.md  yolo26_training.md
src/kronos_analyzer/: character_select.py  cli.py  config.py  ocr_engine.py  raid.py  raid_tracker.py  recognition_artifacts.py  result.py  schemas.py  session_aggregator.py  student_names.py  video.py
tests/: test_character_select.py  test_data.py  test_model.py  test_ocr_engine.py  test_pipeline.py  test_prepare_manifest.py  test_raid.py  test_raid_skill_test.py  test_raid_tracker.py  test_session_aggregator.py  test_shared_artifacts.py  test_skill_data.py  test_skill_pipeline.py  test_video.py  test_yolo_config.py  test_yolo_pipeline.py
tools/: __init__.py  raid_skill_test.py
